--- a/HTML Files/BacCredomatic.html
+++ b/HTML Files/BacCredomatic.html
@@ -123,113 +123,65 @@
                 </div>
             </div>
         </div>
-        <div class="solutions">
-            <div class="solutionsText">
-                <h2>Te brindamos las mejores <br>
-                    soluciones</h2>
-            </div>
-            <div class="solutionsUnderText">
-                <p>Descubrí las opciones que tenemos para vos</p>
-            </div>
-            <div class="solutionsButtons">
-                <div class="solutionsButtons">
-                    <img id="imagen-principal" src="https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_tarjetas_vertical_sinfondo.png.webp?itok=tqfIBROJ" class="buttonHoverImage" alt="Imagen principal">
-                    <button class="solutionsButton"
-                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_tarjetas_vertical_sinfondo.png.webp?itok=tqfIBROJ')"
-                            onmouseout="volverImagen()">Solicitá tu tarjeta aquí</button>
-                    <button class="solutionsButton"
-                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_tarjetas_vertical_sinfondo.png.webp?itok=tqfIBROJ')"
-                            onmouseout="volverImagen()">Renová tu tarjeta</button>
-                    <button class="solutionsButton"
-                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_prestamos_vertical_sinfondo.png.webp?itok=jTlyG1Q1')"
-                            onmouseout="volverImagen()">Conseguí tu préstamo</button>
-                    <button class="solutionsButton"
-                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2023-05/SWC-755-Compass.png.webp?itok=ay1xJiJW')"
-                            onmouseout="volverImagen()">Compass</button>
-                    <button class="solutionsButton"
-                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_sucursales_vertical_sinfondo.png.webp?itok=xRm40Set')"
-                            onmouseout="volverImagen()">¿Cómo podemos ayudarte?</button>
-                    <button class="solutionsButton"
-                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_seguridad_vertical_sinfondo.png.webp?itok=5UGwnqVF')"
-                            onmouseout="volverImagen()">Consejos de seguridad</button>
-                </div>
-            </div>
-        </div>
         <div class="getAppointment">
             <div class="getAppointmentText">
                 <h2>Programa tu cita</h2>
                 <h3>Agendá tu espacio y obtené tu ficha</h3>
             </div>
-            <div class="getAppointmentBoxes1">
-                <h2>Servicio de videollamada</h2>
-                <h3>¡Contáctanos desde donde estés!</h3>
-                <p>Ahorrá tiempo y programá tu cita a través <br>
-                    de nuestros ejecutivos de forma virtual</p>
-                <div class="getAppointmentBoxesImage1">
-                    <img src="https://www.baccredomatic.com/sites/default/files/2021-01/dispositivos-computadora-nube-aplicaciones-BEL.svg" alt="appointmentImage">
-                </div>
-            </div>
-            <div class="getAppointmentBoxes2">
+            <div class="getAppointmentBox">
                 <h2>Agendá tu visita a la <br>
                     sucursal</h2>
                 <h3>¡Planificá tu visita!</h3>
                 <p>Seleccioná el día y la hora de tu <br>
                     preferencia</p>
-                <div class="getAppointmentBoxesImage2">
-                    <img src="https://www.baccredomatic.com/sites/default/files/2021-01/calendario-hora-dia-mes-contacto-agenda.svg" alt="appointmentBoxesImage2">
-                </div>
+                <img src="/Images/HorarioBEC.png" alt="appointmentBoxesImage2">
             </div>
-            <div class="getAppointmentBoxes3">
+            <div class="getAppointmentBox">
+                <h2>Servicio de videollamada</h2>
+                <h3>¡Contáctanos desde donde estés!</h3>
+                <p>Ahorrá tiempo y programá tu cita a través <br>
+                    de nuestros ejecutivos de forma virtual</p>
+                <img src="/Images/CompuBEC.png" alt="appointmentImage">
+            </div>
+            <div class="getAppointmentBox">
                 <h2>Reservá tu ficha para hoy</h2>
                 <h3>¡Adelantará tu turno</h3>
                 <p>Adelantá tu ficha por medio de nuestra <br>
                     ficha virtual</p>
-                <div class="getAppointmentBoxesImage3">
-                    <img src="https://www.baccredomatic.com/sites/default/files/2021-02/sucursal-ventanilla-plataforma-mostrador-asistencia.svg" alt="appointmentBoxesImage3">
-                </div>
+                <img src="/Images/EdificiosBEC.png" alt="appointmentBoxesImage3">
             </div>
         </div>
-        <div class="onlineBank">
-            <div class="onlineBankTextHeader">
-                <h2>Tu banco digital</h2>
-                <h2>Todo lo que necesitás al alcance de un clic</h2>
-            </div>
-            <div class="onlineBankText">
-                <h2>Donde estés, está BEC</h2>
-                <p>¡Utilizá un método de pago más moderno y simple en tu dia a dia! Completá tus transacciones con <br>
-                    tu dispositivo inteligente de forma segura.</p>
-                <div class="onlineBankImage">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-12/BAC_DondeEste%CC%81sEsta%CC%81BAC_11-2.jpg.webp?itok=yUhkfe57" alt="imagen1">
+        <footer class="siteFooter">
+            <div class="footerContent">
+                <div class="footerLogo">
+                    <img src="../Images/BEC.png" alt="Logo BEC">
+                </div>
+                <div class="footerLinks">
+                    <h3>Enlaces útiles</h3>
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Educación financiera</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="footerContact">
+                    <h3>Contáctanos</h3>
+                    <p>Tel: +506 800-BEC-1234</p>
+                    <p>Email: soporte@becdigital.com</p>
+                    <div class="footerSocial">
+                        <ul>
+                            <li><p>Instagram</p></li>
+                            <li><p>Facebook</p></li>
+                            <li><p>Twitter</p></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="onlineBankText">
-                <h2>¿Son necesarios tus consumos?</h2>
-                <p>Aprende sobre buenos hábitos financieros, e incorporarlos <br>
-                    en tu dia a dia, te garantizará un estilo de vida más <br>
-                    responsable y saludable.</p>
-                <div class="onlineBankImage">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-12/BAC_Finanzas_Positivas_noviembre_15_2.jpg.webp?itok=5Da6KYRS" alt="imagen2">
-                </div>
+            <div class="footerBottom">
+                <p>&copy; 2025 BEC Digital. Todos los derechos reservados.</p>
             </div>
-            <div class="onlineBankText">
-                <h2>¡Cuidemos el planeta!</h2>
-                <p>Usá Google Pay para pagar tu próxima salida y así también <br>
-                    aportás y protegés el medio ambiente.</p>
-                <div class="onlineBankImage">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-09/Comprale_tiempo_al_planeta.jpg.webp?itok=09yL_oVg" alt="imagen3">
-                </div>
-            </div>
-            <div class="onlineBankText">
-                <h2>BEC sin límites</h2>
-                <p>Usá Banca Móvil sin limitaciones. Ya tus trámites bancarios no consumen datos móviles</p>
-                <div class="onlineBankImage">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-10/BAC_SinLimites_Octubre.jpg.webp?itok=F6AzvukC" alt="image4">
-                </div>
-            </div>
-        </div>
-        <div class="contactUs">
-            <img src="../Images/BEC.png" alt="footerImage">
-        </div>
+        </footer>
     </div>
 </div>
 </body>
