--- a/HTMLFiles/BacCredomatic.html
+++ b/HTMLFiles/BacCredomatic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script src="../JavaScript%20Files/index.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS%20Files/BECStyle.css">
+    <link rel="stylesheet" href="/CSSFiles/BECStyle.css">
     <title>BEC|Banca online</title>
 </head>
 <body>
@@ -15,8 +15,9 @@
                 <img src="../Images/BEC.png" alt="logo">
             </div>
             <ul class="mainMenu">
-                <li><a href="">Sobre nosotros</a></li>
-                <li><a href="">Préstamos</a></li>
+                <li><a href="BacCredomatic.html">Personas</a></li>
+                <li><a href="aboutUs.html">Sobre nosotros</a></li>
+                <li><a href="loansInfo.html">Préstamos</a></li>
                 <li><a href="">Pymes</a></li>
                 <li><a href="">Private Banking</a></li>
             </ul>
